[package]
name = "crackpipe-lt"
description = "cxx bindings to libtorrent"
version = "0.1.0"
authors = ["Nicolas Chevalier <nicolas.chevalier@enicom.org>"]
edition = "2021"
license = "MIT"
keywords = ["torrent", "magnet"]
links = "torrent-rasterbar"
build = "src/build.rs"
repository = "https://github.com/shawone/libtorrent-sys"

[dependencies]
cxx = "1.0"
serde = { version = "1.0.193", features = ["serde_derive"] }

[build-dependencies]
cxx-build = "1.0.0"
